# pantheon

./: .editorconfig  .env.example  .gitignore  ABOUT_IRA.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HEARTBEAT.md  IRA_TECHNICAL_SPEC.md  LICENSE  MANIFEST.in  PRICING.md  README.md  SECURITY.md  SOUL.md  TECHNICAL_DEBT.md  TEST_RESULTS.md  USER.md  WHY.md  agent.yaml.example  docker-compose.yml  ira_watchdog.sh  orchestrator.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_agents.py  run_consolidation.sh  run_ira.sh  setup.py  setup_gmail.py  setup_openclaw.sh  src  start_ira.sh  start_ira_openclaw.sh  test_runner.py
.cursor/rules/: ira-architecture.mdc  ira-business-rules.mdc  ira-security.mdc  ira-testing.mdc  knowledge-ingestion.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: ci.yml
.openclaw/: workspace-state.json
_archive/backup_files/: README_backup.md
_archive/dead_code_2026_03_03/: feedback_learner.py  ingest_quotes_simple.py
_archive/dead_core_modules/: agent.py  aggressive_research.py  api_rate_limiter.py  consolidation_scheduler.py  customer_enricher.py  deep_dive.py  euro_scraper.py  final_pass.py  fusion.py  health_server.py  ingest_bathroom_ksa.py  ingest_pf1_specs.py  keyword_extract.py  knowledge_hygiene.py  quality_improvement.py  reindex_docs.py  reindex_emails.py  response_types.py  structured_logger.py  targeted_research.py
_archive/legacy_pipelines/: README.md  deep_research_pipeline.py  feedback_processing_pipeline.py  ira_pipeline_orchestrator.py  query_analysis_pipeline.py
_archive/pre_openclaw_legacy/: README.md  email_handler.py  orchestrator.py  telegram_gateway.py
_archive/stale_docs/: DEEP_REPLY_IMPROVEMENT_STRATEGY.md  DREAM_MODE_AUDIT.md  EMAIL_BRAIN_INTEGRATION_PLAN.md  IRA_SYSTEM_AUDIT_ELEVATION_ROADMAP.md  UNIFICATION_GAPS_AUDIT.md
agents/apollo/: AGENTS.md  README.md  accuracy_scorer.py  batch_simulate.py  continuous_learning_loop.py  evaluator.py  grounded_coach.py  human_creative_agent.py  pipeline_validator.py  real_email_training.py  run_simulation.py  scheduled_learning.py  simulator.py  stress_test_emails.py  training_loop.py
agents/athena/: question_generator.py
agents/iris/: AGENT.md  __init__.py  agent.py
agents/minerva/: AGENT.md  __init__.py  finetune_builder.py
agents/nemesis/: test_cases.json  test_runner.py
agents/prometheus/: AGENTS.md  setup_dual_oauth.py
audit_output/: angular_injection_payload.txt  angular_scenario_5_trace.json  vertical_audit_instrumented.json
crm/: relationships.db-shm  relationships.db-wal
crm/logs/: .telegram_gateway_last_update_id  requests.jsonl  telegram_activity_log.json
data/: compressed_memories.json  conflicts.json  counterfactuals.json  creative_insights.json  dream_journal.json  drip_dream_ideas.json  drip_dream_journal.jsonl  drip_morning_summary.json  drip_strategies.json  european_campaign_state.json  european_lead_conversations.json  feedback_backlog.jsonl  feedback_log.jsonl  identities.json  knowledge_coverage_dashboard.html  knowledge_coverage_map.json  learning_suggestions.json  learning_velocity.json  memory_conflicts.json  migration_progress.json  pending_consolidation.json  pf1_c_technical_specs.json  predicted_needs.json  pricing_dashboard.html  pricing_model.json  proactive_state.json  qualification_states.json  quotes2_knowledge.json  quotes_ingested_hashes.json  quotes_knowledge.json  self_test_bank.json  self_test_results.json  source_attributions.json  stock_machines_go_to_market.json  top5_standardize.json  unified_identity.db-shm  unified_identity.db-wal
data/benchy_100/: benchy_100_report.xlsx  checkpoint.jsonl
data/benchy_deep/: checkpoint 2.jsonl  (+4 more)
docs/: AGENT_ARCHITECTURE.md  ALIEN_AUDIT_FINAL.md  ARCHITECTURE_OVERVIEW.md  AUDIT_P0_P1_P2_COMPLETE.md  BEYOND_THE_BRAIN_IMPLEMENTATION.md  CONFIG_SPLIT.md  EMAIL_AUDIT.md  HOLISTIC_ROADMAP_STATUS.md  IRA_AUDIT.md  KNOWLEDGE_DISCOVERY_ARCHITECTURE.md  KNOWLEDGE_HEALTH_SYSTEM.md  KNOWLEDGE_INGESTION.md  README.md  TELEGRAM_BEST_PRACTICES.md  TELEGRAM_BOT_AUDIT.md  UNIFICATION_AUDIT.md  UNIFIED_ARCHITECTURE.md
examples/: quickstart.py
logs/: .gitkeep
openclaw/: __init__.py
scripts/: backup_data.py  benchy.py  benchy_100.py  benchy_deep.py  benchy_telegram.py  bootstrap_crm.py  build_sales_flow_training.py  check_european_lead_conversations.py  com.ira.holistic.plist  com.machinecraft.ira-dream.plist  com.machinecraft.ira-scheduler.plist  com.machinecraft.ira-vitals.plist  consolidate_pf1_models.py  crm_gmail_sync.py  dream_progress.sh  email_openclaw_bridge.py  extract_european_sales_journeys.py  extract_inquiry_conversations.py  extract_inquiry_conversations_v2.py  extract_inquiry_full_threads.py  extract_verified_sales_cycles.py  ingest_4_axis_cnc_router.py  ingest_all_imports.py  ingest_am_p_6050_double_pitch.py  ingest_anatomic_sitt_pf1_quote.py  ingest_car_mats_study.py  ingest_clients_mc_europe.py  ingest_diamond_mine_leads.py  ingest_doc.py  ingest_europe_sales_memo.py  ingest_european_sales_training.py  ingest_fcs_6070_4s_quotation.py  ingest_formpack_presentations.py  ingest_group_presentation.py  ingest_india_cv_market.py  ingest_ir_heating_system.py  ingest_k2016_exhibition.py  ingest_k2022_meetings.py  ingest_k2025_leads.py  ingest_llm_thermoforming_prospects.py  (+67 more)
tests/: __init__.py  conftest.py  test_brain_orchestrator.py  test_config.py  test_dream_mode.py  test_email_handler.py  test_handlers.py  test_holistic_systems.py  test_integration.py  test_knowledge_health.py  test_memory_consolidator.py  test_patterns.py  test_reliability_pipeline.py  test_resilience.py  test_state.py  test_tool_orchestrator.py  test_unified_identity.py  test_unified_retriever.py
workflows/: research_write_verify.yaml
(+464 files in other folders)
