[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ira"
version = "1.0.0"
description = "Ira - Intelligent Revenue Assistant for Machinecraft Technologies"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Rushabh Doshi", email = "rushabh@machinecraft.org"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "sales", "assistant", "telegram", "email", "rag", "llm"]

dependencies = [
    # Core AI/ML
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    
    # Vector database
    "qdrant-client>=1.7.0",
    
    # Embeddings
    "voyageai>=0.2.0",
    
    # Web framework
    "requests>=2.31.0",
    
    # Data processing
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    
    # PDF processing
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    
    # Database
    "psycopg2-binary>=2.9.0",
    
    # Google APIs
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    
    # Async
    "aiohttp>=3.9.0",
    
    # Environment
    "python-dotenv>=1.0.0",
    
    # Reranking
    "flashrank>=0.2.0",
    
    # Memory
    "mem0ai>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/machinecraft/ira"
Documentation = "https://github.com/machinecraft/ira#readme"
Repository = "https://github.com/machinecraft/ira"
Issues = "https://github.com/machinecraft/ira/issues"

[project.scripts]
ira = "openclaw.agents.ira.agent:main"
ira-telegram = "openclaw.agents.ira.skills.telegram_channel.telegram_gateway:main"
ira-email = "openclaw.agents.ira.skills.email_channel.email_handler:main"
ira-backup = "scripts.backup_data:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openclaw*", "scripts*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt"]

# =============================================================================
# Black formatter configuration
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | build
    | dist
    | \.eggs
)/
'''

# =============================================================================
# isort configuration
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["openclaw", "config"]
skip_gitignore = true

# =============================================================================
# Ruff linter configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__
"tests/*" = ["B011"]      # assert OK in tests

# =============================================================================
# MyPy type checking configuration
# =============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "docs/",
    "build/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# =============================================================================
# pytest configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -ra"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# =============================================================================
# Coverage configuration
# =============================================================================
[tool.coverage.run]
source = ["openclaw"]
branch = true
omit = [
    "tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
]
show_missing = true
